--- a/my-fitnes-planner-app/src/index.html
+++ b/my-fitnes-planner-app/src/index.html
@@ -15,6 +15,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!--  Ng bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
